k8s/gke/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: flask-app
  labels:
    app: flask-frontend
  annotations:
    cloud.google.com/backend-config: '{"default":"frontend-backend-config"}'
spec:
  type: ClusterIP
  selector:
    app: flask-frontend
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
